# betterup-analytics

./: .env.sample  .gitignore  .gitx.yml  Makefile  README.md  app.json  requirements.txt
python_utils/open_ai_dbt_doc_gen/: Makefile  TEMPLATE.env  dbt_project.py  main.py  pyproject.toml  readme.md
warehouse/: .dockerignore  .gitignore  .sqlfluff  .sqlfluffignore  CONTRIBUTING.md  Makefile  README.md  data_links.yml  dbt_project.yml  dbt_recipe.dhub.yaml  eu-replication.puml  packages.yml  pyproject.toml  selectors.yml  setup.profiles.yml
warehouse/.fedramp/: Dockerfile  Dockerfile.fips
warehouse/config/: configure_permissions.sql  configure_stages.sql  create_accounts.sql  create_bootstrap_users.sql  create_databases.sql  create_pipes.sql  create_roles.sql  create_schemas.sql  create_users.sql  create_warehouses.sql  monte_carlo_permissions.sql  upload_sendgrid.sql
warehouse/macros/: account_key.sql  augment_billable_event_type.sql  bool_or.sql  cloning.sql  coach_key.sql  contract_key.sql  convert_account_health_categorical_score_to_numeric.sql  convert_airbyte_sfdc_name_to_segment_sfdc_name.sql  convert_sfdc_number_field_scientific_notation.sql  convert_timezone.sql  convert_yes_no_string_to_boolean.sql  create_udfs.sql  date_key.sql  deployment_key.sql  development_topic_key.sql  environment.sql  filter_by_island.sql  fips_compliant_surrogate_key.sql  flatten_json.sql  get_custom_schema.sql  get_date_difference.sql  get_day_difference.sql  get_first_name_from_email.sql  get_json_object.sql  get_last_name_from_email.sql  get_month_difference.sql  member_key.sql  (+35 more)
(+1843 files in other folders)
